--- a/mtams/mtams-war/web/forexCreate.xhtml
+++ b/mtams/mtams-war/web/forexCreate.xhtml
@@ -317,7 +317,7 @@
 
                                     <p:dialog header="Currency Selector" widgetVar="dlgcurrency2">
 
-                                        <div id="DTdivtest" class="divCurrency2" >
+                                        <div id="DTdivtest" class="divCurrency" >
 
                                             <p:dataTable id="currencytest2" styleClass="dlgCurrency2" var="currency2" 
                                                          value="#{dataLookUpBean.currencyList}" rowKey="#{currency2.idcurrency}"  
@@ -396,7 +396,7 @@
 
                                     <p:dialog header="Currency Selector" widgetVar="dlgcurrency3">
 
-                                        <div id="DTdivtest" class="divCurrency3" >
+                                        <div id="DTdivtest" class="divCurrency" >
 
                                             <p:dataTable id="currencytest3" styleClass="dlgCurrency3" var="currency3" 
                                                          value="#{dataLookUpBean.currencyList}" rowKey="#{currency3.idcurrency}"  
