--- a/mtams/mtams-war/web/applicationHome.xhtml
+++ b/mtams/mtams-war/web/applicationHome.xhtml
@@ -30,12 +30,12 @@
                         <fieldset>
                             <legend><h4>Foreign Exchange Request Form</h4></legend>
                             <p:button value="Create Foreign Exchange Form" outcome="#{appBean.goCreateForex()}" disabled="false" />
-                            <p:button value="View/Edit Foreign Exchange Form" outcome="#{appBean.goViewForex()}" disabled="true" rendered="false" />
+                            <p:button value="View/Edit Foreign Exchange Form" outcome="#{appBean.goViewForex()}" disabled="false" rendered="true" />
                         </fieldset>
                         <fieldset>
                             <legend><h4>Motivation Form</h4></legend>
-                            <p:button value="Create Motivation Form" disabled="true" />
-                            <p:button value="View/Edit Motivation Form" disabled="true" rendered="false" />
+                            <p:button value="Create Motivation Form" outcome="#{appBean.goCreateMotivation()}" disabled="false" />
+                            <p:button value="View/Edit Motivation Form" outcome="#{appBean.goViewMotivation()}" disabled="false" rendered="true" />
                         </fieldset>
                     </p:panel>
 
