--- a/branches/megamerge/mtams/mtams-war/web/editAdminSelect.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/editAdminSelect.xhtml
@@ -14,7 +14,9 @@
                 <h:form id="editAdminSelectForm">
                     <p:messages autoUpdate="true" closable="true" showDetail="true" globalOnly="true"/>
 
-                    <p:dataTable id="dataTable" var="account" value="#{editAdminBean.adminAccList}" binding="#{editAdminBean.dataTable}" rowKey="#{account.idaccount}" selection="#{editAdminBean.selectedAcc}" selectionMode="single">  
+                    <p:dataTable id="dataTable" var="account" value="#{editAdminBean.adminAccList}" binding="#{editAdminBean.dataTable}" rowKey="#{account.idaccount}" selection="#{editAdminBean.selectedAcc}" selectionMode="single"
+                                 paginator="true" rows="10"  
+                                 paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}">  
 
                         <f:facet name="header">  
                             Please Select the Account to be Edited
