--- a/branches/megamerge/mtams/mtams-war/web/createAdmin.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/createAdmin.xhtml
@@ -16,14 +16,14 @@
                     <h4>Please Complete All of the Fields Below</h4>
                     <fieldset><legend><h4>Admin Details:</h4></legend>
                         <p:messages autoUpdate="true" closable="true" showDetail="true" globalOnly="true"/>
-                        <h:panelGrid columns="3" styleClass="grid">
+                        <h:panelGrid columns="4" columnClasses="label, value, error">
                             
                             <h:outputText value="Administrator Username:" />
                             <p:inputText id="adminName" required="true" value="#{superAdminBean.adminName}" requiredMessage="Required Field">
                                 <p:ajax update="adminMIP" event="blur" />
                             </p:inputText>
                             <p:message for="adminName" id="adminMIP"/>
-
+                            <p:watermark for="adminName" value="a2314745" />
 
                             <h:outputText value="Password:"/>
                             <p:password id="adminPassword" label="Password" required="true" match="adminPasswordConf" value="#{superAdminBean.adminPassword}" requiredMessage="Required Field"
@@ -32,13 +32,16 @@
                                 <p:ajax update="passMessage1,passMessage2" event="blur" async="true"/>
                             </p:password>
                             <p:message id="passMessage1" for="adminPassword"/>
+                            <p:watermark for="adminPassword" value="Password *" />
 
                             <h:outputText value="Confirm Password:"/>
                             <p:password id="adminPasswordConf" label="Check Password" required="true" value="#{superAdminBean.adminPassword}" requiredMessage="Required Field">
                                 <p:ajax update="passMessage2,passMessage1" event="blur" async="true"/>
                             </p:password>
                             <p:message id="passMessage2" for="adminPasswordConf"/>
-
+                            <p:watermark for="adminPasswordConf" value="Password *" />
+                        </h:panelGrid>
+                        <h:panelGrid columns="3" columnClasses="label, value, error">
                             <h:outputText value="Assigned Department:" />
                             <p:selectOneMenu required="true" requiredMessage="Required Field" value="#{superAdminBean.department}" id="dept">
                                 <f:selectItem  itemLabel="Select a Department" itemValue=""/>
