fixed issues with template not referenced correctly in subdires like test.
fixed issues with currency and CRC includes. 
Added includes for currency crc into finalcosting create. hard coded the app and account id for testing.

--- a/branches/megamerge/mtams/mtams-war/web/tests/lookuptest.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/tests/lookuptest.xhtml
@@ -10,7 +10,7 @@ and open the template in the editor.
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <body>
-        <ui:composition template="/template/template.xhtml">
+        <ui:composition template="../template/template_1.xhtml">
 
             <ui:define name="content"> 
 
