--- a/mtams/mtams-war/web/tests/include.test.xhtml
+++ b/mtams/mtams-war/web/tests/include.test.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="../template/template.xhtml">
+        <ui:composition template="../template/template_1.xhtml">
 
             <ui:define name="content">
                 <div> 
