--- a/mtams/mtams-war/web/tests/lookuptest.xhtml
+++ b/mtams/mtams-war/web/tests/lookuptest.xhtml
@@ -10,7 +10,7 @@ and open the template in the editor.
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <body>
-        <ui:composition template="/template/template.xhtml">
+        <ui:composition template="../template/template_1.xhtml">
 
             <ui:define name="content"> 
 
