--- a/mtams/mtams-war/web/tests/mailsendtest.xhtml
+++ b/mtams/mtams-war/web/tests/mailsendtest.xhtml
@@ -13,7 +13,7 @@ and open the template in the editor.
 
     <body>
 
-        <ui:composition template="./template/template.xhtml">
+        <ui:composition template="../template/template_1.xhtml">
             <ui:define name="content">
                 <ui:remove>
                     <!---
